# universal-config-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  readme.md
.github/workflows/: build.yml  deploy.yml
src/: error.rs  lib.rs
test_configs/: config.corn  config.kdl  config.ron  config.xml
