[package]
name = "universal-config"
version = "0.4.3"
edition = "2021"
description = "A library to simplify reading configuration files from various file formats."
license = "MIT"
keywords = ["config", "serde"]

[features]
default = ["json", "yaml", "toml", "corn", "xml", "ron"]

# aliases
# toml does not need to be explicitly included as the dep provides a feature
json = ["serde_json"]
yaml = ["serde_yaml"]
corn = ["libcorn"]
xml = ["serde-xml-rs"]

[dependencies]
serde = "1.0.155"
dirs = "5.0.0"
thiserror = "1.0.39"
tracing = "0.1.37"

# optional
serde_json = { version = "1.0.96", optional = true }
serde_yaml = { version = "0.9.21", optional = true }
toml = { version = "0.7.4", optional = true }
libcorn = { version = "0.9.0", optional = true }
serde-xml-rs = { version = "0.6.0", optional = true }
ron = { version = "0.8.0", optional = true }