[package]
name = "universal-config"
version = "0.5.0"
edition = "2021"
description = "A library to simplify reading configuration files from various file formats."
license = "MIT"
keywords = ["config", "serde"]

[features]
default = ["json", "yaml", "toml", "corn", "xml", "ron", "kdl"]

# aliases
# toml does not need to be explicitly included as the dep provides a feature
json = ["serde_json"]
yaml = ["serde_yaml"]
corn = ["libcorn"]
xml = ["serde-xml-rs"]
kdl = ["kaydle"]

[dependencies]
serde = "1.0.197"
dirs = "5.0.0"
thiserror = "1.0.58"
tracing = "0.1.40"

# optional
serde_json = { version = "1.0.117", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
toml = { version = "0.8.14", optional = true }
libcorn = { version = "0.9.2", optional = true }
serde-xml-rs = { version = "0.6.0", optional = true }
ron = { version = "0.8.1", optional = true }
kaydle = { version = "0.2.0", optional = true }